feat(session-5): complete agentic workflow implementation with TDD enforcement
- Add custom chat modes (tdd-developer, code-reviewer, git-helper)
- Add workflow prompts (execute-step, validate-step, commit-and-push)
- Implement complete 5-step workflow (setup, TDD, lint, implementation, review)
- Add error handling to workflow orchestration (enable/disable steps)
- Enhance documentation with custom mode examples
- Fix workflow chain (Step 5-3 now properly enables Step 5-4)
- Modernize UI with Material-UI and React Query
- Preserve intentional bugs for learning objectives

--- a/.github/workflows/5-0-start-exercise.yml
+++ b/.github/workflows/5-0-start-exercise.yml
@@ -12,7 +12,7 @@ permissions:
   issues: write
 
 env:
-  STEP_5_FILE: '.github/steps/5-0-setup-chat-modes.md'
+  STEP_5_FILE: '.github/steps/5-0-setup-workflow.md'
 
 jobs:
   start_exercise:
@@ -21,8 +21,8 @@ jobs:
     name: Start Exercise
     uses: skills/exercise-toolkit/.github/workflows/start-exercise.yml@v0.4.0
     with:
-      exercise-title: 'AI Coding Assistant Enablement Bootcamp Session 5'
-      intro-message: "Welcome to Session 5: Agentic Development! 🚀 In this session, you'll practice iterative AI-assisted workflows including Test-Driven Development, systematic error resolution, and incremental feature implementation. First, you'll create custom Copilot chat modes tailored for TDD and code review - your AI pair programming partners! Then you'll use these modes to build reliable, tested code through systematic iteration. Let's get started! 💻✨"
+      exercise-title: "AI Coding Assistant Enablement Bootcamp Session 5"
+      intro-message: "Welcome to Session 5 - Agentic Development! In this session you will practice iterative AI-assisted workflows including TDD, linting, and incremental implementation."
 
   post_next_step_content:
     name: Post next step content
