--- a/.github/workflows/5-1-tdd-workflow.yml
+++ b/.github/workflows/5-1-tdd-workflow.yml
@@ -1,10 +1,10 @@
-name: Step 5-1 # TDD Workflow
+name: Step 5-1
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - feature/tdd-backend
+      - feature/agentic-workflow
 
 permissions:
   contents: read
@@ -14,50 +14,86 @@ permissions:
 env:
   CURRENT_STEP: '5-1'
   NEXT_STEP: '5-2'
-  STEP_FILE: '.github/steps/5-2-lint-and-compile.md'
+  STEP_FILE: '.github/steps/5-1-tdd-workflow.md'
 
 jobs:
-  validate_step:
-    name: Validate TDD Workflow
+  find_exercise:
+    name: Find Exercise Issue
+    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@v0.4.0
+
+  post_next_step:
+    name: Post Step 5-1 instructions
     runs-on: ubuntu-latest
+    needs: [find_exercise]
+    env:
+      ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run backend tests
-        id: test
+      - name: Validate Step 5-0 Prerequisites
+        id: validate
         run: |
-          cd packages/backend
-          npm test 2>&1 | tee test-output.txt
-          TEST_EXIT_CODE=${PIPESTATUS[0]}
-          echo "exit_code=$TEST_EXIT_CODE" >> $GITHUB_OUTPUT
-          exit $TEST_EXIT_CODE
+          echo "Checking for Step 5-0 completion..."
 
-      - name: Check if all tests pass
-        if: steps.test.outputs.exit_code == '0'
-        run: echo "All backend tests passed!"
+          # Check for required files
+          MISSING_FILES=()
 
-  post_success:
-    name: Post success comment
-    needs: [validate_step]
-    if: success()
-    runs-on: ubuntu-latest
+          if [ ! -f ".github/copilot-instructions.md" ]; then
+            MISSING_FILES+=("copilot-instructions.md")
+          fi
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+          if [ ! -f ".github/chatmodes/tdd-developer.chatmode.md" ]; then
+            MISSING_FILES+=("tdd-developer.chatmode.md")
+          fi
+
+          if [ ! -f ".github/chatmodes/code-reviewer.chatmode.md" ]; then
+            MISSING_FILES+=("code-reviewer.chatmode.md")
+          fi
+
+          if [ ! -f ".github/prompts/execute-step.prompt.md" ]; then
+            MISSING_FILES+=("execute-step.prompt.md")
+          fi
+
+          if [ ! -f ".github/prompts/validate-step.prompt.md" ]; then
+            MISSING_FILES+=("validate-step.prompt.md")
+          fi
+
+          if [ ! -f ".github/prompts/commit-and-push.prompt.md" ]; then
+            MISSING_FILES+=("commit-and-push.prompt.md")
+          fi
+
+          if [ ${#MISSING_FILES[@]} -gt 0 ]; then
+            echo "❌ Step 5-0 is incomplete. Missing files:"
+            printf '%s\n' "${MISSING_FILES[@]}"
+            echo "Please complete Step 5-0 before proceeding to Step 5-1."
+            echo "validation_failed=true" >> $GITHUB_OUTPUT
+          else
+            echo "✅ All Step 5-0 files present"
+            echo "validation_failed=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Post validation failure comment
+        if: steps.validate.outputs.validation_failed == 'true'
+        run: |
+          gh issue comment "$ISSUE_URL" --body "## ⚠️ Step 5-0 Not Complete
+
+          Step 5-1 requires the workflow automation infrastructure created in Step 5-0.
+
+          **Missing files detected**. Please:
+          1. Return to Step 5-0
+          2. Complete all activities (create chat modes, prompts, and instructions)
+          3. Commit and push your changes to \`feature/agentic-workflow\` branch
+          4. This workflow will run again automatically
+
+          The automation ensures you have the tools needed for Steps 5-1 through 5-3!"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Exit if validation failed
+        if: steps.validate.outputs.validation_failed == 'true'
+        run: exit 1
 
       - name: Get response templates
         uses: actions/checkout@v4
@@ -65,14 +101,6 @@ jobs:
           repository: skills/exercise-toolkit
           path: exercise-toolkit
           ref: v0.4.0
-
-      - name: Find open issue
-        id: find-issue
-        run: |
-          ISSUE_NUMBER=$(gh issue list --label "bootcamp-session-5" --state open --json number --jq '.[0].number')
-          echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build comment - add step content
         id: build-comment
@@ -83,22 +111,21 @@ jobs:
             login: ${{ github.actor }}
             full_repo_name: ${{ github.repository }}
 
-      - name: Post success and next step
+      - name: Post Step 5-1 content
         run: |
-          gh issue comment ${{ steps.find-issue.outputs.issue_number }} \
-            --body "✅ **Step ${{ env.CURRENT_STEP }} Complete!** All backend tests are passing. Great work on the TDD workflow!
-
-          $NEXT_STEP_CONTENT"
+          gh issue comment "$ISSUE_URL" --body "$STEP_CONTENT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NEXT_STEP_CONTENT: ${{ steps.build-comment.outputs.updated-text }}
+          STEP_CONTENT: ${{ steps.build-comment.outputs.updated-text }}
 
       - name: Disable current workflow
-        run: gh workflow disable "Step ${{ env.CURRENT_STEP }}"
+        run: |
+          gh workflow disable "Step ${{ env.CURRENT_STEP }}" || echo "Failed to disable Step ${{ env.CURRENT_STEP }} or it's already disabled"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable next workflow
-        run: gh workflow enable "Step ${{ env.NEXT_STEP }}"
+        run: |
+          gh workflow enable "Step ${{ env.NEXT_STEP }}" || echo "Failed to enable Step ${{ env.NEXT_STEP }} or it's already enabled"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
