--- a/.github/workflows/5-2-lint-and-compile.yml
+++ b/.github/workflows/5-2-lint-and-compile.yml
@@ -1,10 +1,10 @@
-name: Step 5-2 # Lint and Compile
+name: Step 5-2
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - feature/clean-code
+      - feature/agentic-workflow
 
 permissions:
   contents: read
@@ -14,7 +14,7 @@ permissions:
 env:
   CURRENT_STEP: '5-2'
   NEXT_STEP: '5-3'
-  STEP_FILE: '.github/steps/5-3-incremental-implementation.md'
+  STEP_FILE: '.github/steps/5-2-lint-and-compile.md'
 
 jobs:
   validate_step:
@@ -52,11 +52,17 @@ jobs:
         id: test
         run: npm test
 
+  find_exercise:
+    name: Find Exercise Issue
+    uses: skills/exercise-toolkit/.github/workflows/find-exercise-issue.yml@v0.4.0
+
   post_success:
     name: Post success comment
-    needs: [validate_step]
+    needs: [validate_step, find_exercise]
     if: success()
     runs-on: ubuntu-latest
+    env:
+      ISSUE_URL: ${{ needs.find_exercise.outputs.issue-url }}
 
     steps:
       - name: Checkout
@@ -69,14 +75,6 @@ jobs:
           path: exercise-toolkit
           ref: v0.4.0
 
-      - name: Find open issue
-        id: find-issue
-        run: |
-          ISSUE_NUMBER=$(gh issue list --label "bootcamp-session-5" --state open --json number --jq '.[0].number')
-          echo "issue_number=$ISSUE_NUMBER" >> $GITHUB_OUTPUT
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build comment - add step content
         id: build-comment
         uses: skills/action-text-variables@v2
@@ -88,20 +86,21 @@ jobs:
 
       - name: Post success and next step
         run: |
-          gh issue comment ${{ steps.find-issue.outputs.issue_number }} \
-            --body "✅ **Step ${{ env.CURRENT_STEP }} Complete!** No lint errors and all tests passing. Your code is clean!
+          gh issue comment "$ISSUE_URL" --body "✅ **Step ${{ env.CURRENT_STEP }} Complete!** No lint errors and all tests passing. Your code is clean!
 
-          $NEXT_STEP_CONTENT"
+          $STEP_CONTENT"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NEXT_STEP_CONTENT: ${{ steps.build-comment.outputs.updated-text }}
+          STEP_CONTENT: ${{ steps.build-comment.outputs.updated-text }}
 
       - name: Disable current workflow
-        run: gh workflow disable "Step ${{ env.CURRENT_STEP }}"
+        run: |
+          gh workflow disable "Step ${{ env.CURRENT_STEP }}" || echo "Failed to disable Step ${{ env.CURRENT_STEP }} or it's already disabled"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Enable next workflow
-        run: gh workflow enable "Step ${{ env.NEXT_STEP }}"
+        run: |
+          gh workflow enable "Step ${{ env.NEXT_STEP }}" || echo "Failed to enable Step ${{ env.NEXT_STEP }} or it's already enabled"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
