Update 5-4-review workflow

--- a/.github/workflows/5-4-review.yml
+++ b/.github/workflows/5-4-review.yml
@@ -57,6 +57,6 @@ jobs:
 
   call-scoreboard-completion:
     name: Call Scoreboard Completion
-    needs: [check_step_work]
+    needs: [post_review]
     if: success()
     uses: ./.github/workflows/scoreboard-post-completion.yml
