--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -15,7 +15,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "eslint": "^8.50.0",
+    "eslint": "~8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
