--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,7 +25,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
-    "eslint": "^8.50.0"
+    "eslint": "~8.57.0"
   },
   "eslintConfig": {
     "extends": [
