--- a/.github/workflows/5-4-review.yml
+++ b/.github/workflows/5-4-review.yml
@@ -55,8 +55,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  call-scoreboard-completion:
-    name: Call Scoreboard Completion
-    needs: [post_review]
-    if: success()
-    uses: ./.github/workflows/scoreboard-post-completion.yml
+  # call-scoreboard-completion:
+  #   name: Call Scoreboard Completion
+  #   needs: [post_review]
+  #   if: success()
+  #   uses: ./.github/workflows/scoreboard-post-completion.yml
